--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
   --secondary: #cc94b4;
 
   --radius: 0.625rem;
-  --background: #1c1a1b;
+  --background: black;
   --foreground: #ffffff;
   --card: #2a2729;
   --card-foreground: #ffffff;
